--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">Playlist Maker</string>
+    <string name="search_botton">Поиск</string>
+    <string name="lib_botton">Медиатека</string>
+    <string name="settings">Настройки</string>
+    <string name="Night_mode">Темная тема</string>
+    <string name="Share">Поделиться приложением</string>
+    <string name="Support">Написать в поддержку</string>
+    <string name="Agreement">Пользовательское соглашение</string>
+
 </resources>
