Sprint 9. Homework 2 - completed The buttons "Share the application", "Write to support", "User Agreement" are implemented

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -9,4 +9,9 @@
     <string name="Support">Support</string>
     <string name="Agreement">User Agreement</string>
     <string name="TBD">The section is under development</string>
+    <string name="Practicum_Web">https://practicum.yandex.ru/learn/android-developer</string>
+    <string name="support_contact">m.isaev96@yandex.ru</string>
+    <string name="support_Title">Message to the developers of the Playlist Maker app</string>
+    <string name="sup_text">Thanks to the developers for the cool app!</string>
+    <string name="Agreement_link">https://yandex.ru/legal/practicum_offer/</string>
 </resources>
