--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,11 @@
     <string name="Support">Написать в поддержку</string>
     <string name="Agreement">Пользовательское соглашение</string>
     <string name="TBD">Раздел в разработке</string>
+    <string name="Practicum_Web">https://practicum.yandex.ru/learn/android-developer</string>
+    <string name="support_contact">m.isaev96@yandex.ru</string>
+    <string name="support_Title">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
+    <string name="sup_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
+    <string name="Agreement_link">https://yandex.ru/legal/practicum_offer/</string>
+
 
 </resources>
