--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -14,4 +14,5 @@
     <string name="support_Title">Message to the developers of the Playlist Maker app</string>
     <string name="sup_text">Thanks to the developers for the cool app!</string>
     <string name="Agreement_link">https://yandex.ru/legal/practicum_offer/</string>
+    <string name="search_title">Search</string>
 </resources>
