--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,7 @@
     <string name="agreement_link">https://yandex.ru/legal/practicum_offer/</string>
     <string name="search_title">Поиск</string>
     <string name="text_separator">" • "</string>
+    <string name="nothing">Ничего не нашлось</string>
+    <string name="connect_err_mess">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
+    <string name="update">Обновить</string>
 </resources>
