--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -17,6 +17,6 @@
     <string name="search_title">Search</string>
     <string name="text_separator">" • "</string>
     <string name="nothing">Nothing was found</string>
-    <string name="connect_err_mess">Communication problems\n\nThe download failed. Check your internet connection</string>
+    <string name="connect_error">Communication problems\n\nThe download failed. Check your internet connection</string>
     <string name="update">"Refresh "</string>
 </resources>
