--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -17,6 +17,6 @@
     <string name="search_title">Поиск</string>
     <string name="text_separator">" • "</string>
     <string name="nothing">Ничего не нашлось</string>
-    <string name="connect_err_mess">Проблемы со связью\\n\\nЗагрузка не удалась. Проверьте подключение к интернету</string>
+    <string name="connect_error">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
     <string name="update">Обновить</string>
 </resources>
