--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -22,4 +22,10 @@
     <string name="history_title">You looked</string>
     <string name="clear_history">Clear History</string>
     <string name="clear_text">Clear Text</string>
+    <string name="no_data_available">No Data</string>
+    <string name="duration">Duration</string>
+    <string name="year">Year</string>
+    <string name="genre">Genre</string>
+    <string name="country">Country</string>
+    <string name="album">Album</string>
 </resources>
