--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,10 @@
     <string name="history_title">Вы искали</string>
     <string name="clear_history">Очистить историю</string>
     <string name="clear_text">Очистить текст</string>
+    <string name="no_data_available">Нет данных</string>
+    <string name="duration">Длительность</string>
+    <string name="year">Год</string>
+    <string name="genre">Жанр</string>
+    <string name="country">Страна</string>
+    <string name="album">Альбом</string>
 </resources>
