HW. 16  Обновлен SettingsActivity

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -11,6 +11,7 @@
     <string name="night_mode">Dark Teme</string>
     <string name="share">Share the app</string>
     <string name="support">Support</string>
+    <string name="practikumHeader">Yandex Practucum</string>
     <string name="support_contact">m.isaev96@yandex.ru</string>
     <string name="support_Title">Message to the developers of the Playlist Maker app</string>
     <string name="sup_text">Thanks to the developers for the cool app!</string>
