--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -11,6 +11,7 @@
     <string name="night_mode">Темная тема</string>
     <string name="share">Поделиться приложением</string>
     <string name="support">Написать в поддержку</string>
+    <string name="practikumHeader">Yandex Practucum</string>
     <string name="support_contact">m.isaev96@yandex.ru</string>
     <string name="support_Title">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
     <string name="sup_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
