HW. 16  MVVM проведен тотальный багофикс

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,10 +10,11 @@
     <string name="tbd">Раздел в разработке</string>
     <string name="practicum_Web">https://practicum.yandex.ru/learn/android-developer</string>
     <string name="practikumHeader">Yandex Practucum</string>
-    <string name="support_contact">m.isaev96@yandex.ru</string>
-    <string name="support_Title">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
-    <string name="sup_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
-    <string name="agreement_link">https://yandex.ru/legal/practicum_offer/</string>
+    <string name="supportMail">m.isaev96@yandex.ru</string>
+    <string name="suportSubject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
+    <string name="supportText">Спасибо разработчикам и разработчицам за крутое приложение!</string>
+    <string name="termsLink">https://yandex.ru/legal/practicum_offer/</string>
+    <string name="application_not_found">Не удалось найти приложение!</string>
     <string name="search_title">Поиск</string>
     <string name="text_separator">" • "</string>
     <string name="nothing">Ничего не нашлось</string>
@@ -24,9 +25,10 @@
     <string name="clear_text">Очистить текст</string>
     <string name="no_data_available">Нет данных</string>
     <string name="duration">Длительность</string>
+    <string name="album">Альбом</string>
     <string name="year">Год</string>
     <string name="genre">Жанр</string>
     <string name="country">Страна</string>
-    <string name="album">Альбом</string>
+    <string name="time_zero">00:00</string>
 
 </resources>
