--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -31,4 +31,9 @@
     <string name="album">Альбом</string>
     <string name="time_zero">00:00</string>
     <string name="application_not_found">Не удалось найти приложение!</string>
+    <string name="empty_favorites">Ваша медиатека пуста</string>
+    <string name="create_playlist">Новый плейлист</string>
+    <string name="empty_playlists">Вы не создали ни одного плейлиста</string>
+    <string name="playlists">Плейлисты</string>
+    <string name="favorite_tracks">Избранные треки</string>
 </resources>
