--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,5 +30,9 @@
     <string name="genre">Жанр</string>
     <string name="country">Страна</string>
     <string name="time_zero">00:00</string>
-
+    <string name="empty_favorites">Ваша медиатека пуста</string>
+    <string name="create_playlist">Новый плейлист</string>
+    <string name="empty_playlists">Вы не создали ни одного плейлиста</string>
+    <string name="playlists">Плейлисты</string>
+    <string name="favorite_tracks">Избранные треки</string>
 </resources>
