--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -50,4 +50,14 @@
     <string name="add_to_playlist">Add to Playlist</string>
     <string name="playlist_added">Added to %s playlist</string>
     <string name="playlist_not_added">The track has already been added to the playlist %s</string>
+    <string name="playlist_info">%1$s minutes · %2$s</string>
+    <string name="share_playlist">To share</string>
+    <string name="delete_playlist_message">Do you want to delete the playlist \\\"%1$s\\\"?</string>
+    <string name="no">No</string>
+    <string name="yes">Yes</string>
+    <string name="edit_playlist">Edit information</string>
+    <string name="delete_playlist">Delete a playlist</string>
+    <string name="delete_track">Do you want to delete the track?</string>
+    <string name="no_track_in_playlist">There is no track list to share in this playlist.</string>
+    <string name="emplty_playlist">There are no tracks in the playlist</string>
 </resources>
